[metadata]
name = fake_sasdie
version = 1.0.0
description = Fake sasdie lib for meant local test
author = Sigmanificient
author_email = edhyjox@gmail.com
url = https://github.com/UwU-Bacoin/ProjetDIE
license = GNU GPLv3
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.10
